--- a/monitoring/ecs_dashboard/client/src/EventBox.css
+++ b/monitoring/ecs_dashboard/client/src/EventBox.css
@@ -1,25 +1,23 @@
 .EventBox {
-  background-color: #f5f5f5;
-  margin-top: 10px;
-  padding: 3px 3px 3px 5px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  height: 100px;
-  position: relative;
-  overflow: hidden;
-  display: none;
+    background-color: #f5f5f5;
+    margin-top: 10px;
+    padding: 3px 3px 3px 5px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    height: 100px;
+    visibility: hidden;
+    position: absolute;
+    overflow: hidden;
+    z-index: 1;
 }
 
 .EventList {
-  color: #2B8539;
-  font-family: monospace;
-  font-size: x-small;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  max-width: 100%;
+    color: #2B8539;
+    font-family: monospace;
+    font-size: x-small;
 }
 
 .EventList--Event {
-  text-align: left;
+    text-align: left;
 }
