--- a/monitoring/ecs_dashboard/client/src/ServiceBox.css
+++ b/monitoring/ecs_dashboard/client/src/ServiceBox.css
@@ -6,7 +6,6 @@
   border-radius: 4px;
   box-shadow: 0 1px 2px rgba(0,0,0,.05);
   border-color: #ddd;
-  position: relative;
 }
 
 .ServiceBox--Header {
@@ -52,7 +51,7 @@
 }
 
 a.ServiceBox--Header__Name:hover + .EventBox {
-    display: block;
+    visibility: visible;
 }
 
 @media (min-width: 1025px) {
